# hadoop-stream-mapreduce

./: HowToBuild.md  Performance.md  ProjectHome.md  configure.ac
src/: Makefile.am  check_log.cc  check_log.h  hadoop_streaming_mapreduce.cc  hadoop_streaming_mapreduce.h  string_split.cc  string_split.h  word_count_mapper.cc  word_count_reducer.cc
src/.deps/: check_log.Po  hadoop_streaming_mapreduce.Po  string_split.Po  word_count_mapper.Po  word_count_reducer.Po
